# canebiere

./: .gitignore  2021_2022.html  2022_2023.html  2023_2024.html  academies.html  data_creation.ipynb  data_creation.py  exploration.html  exploration.ipynb  generate_2021_2022.ipynb  generate_2022_2023.ipynb  generate_2023_2024.ipynb  generate_academies.ipynb  generate_notes.ipynb  generate_opponents.ipynb  generate_page.ipynb  generate_website.sh  generate_words.ipynb  index.html  notes.html  opponents.html  pyproject.toml  some_stats.ipynb  topics.ipynb  topics.py  words.html
dashboard/web/: routes.py
dashboard/web/static/: notes.csv  resultats.csv
dashboard/web/templates/: history.html  layout.html  recent.html
dashboard/web/utils/: altair_plot.py
scraper/: scrapy.cfg
scraper/canebiere/: items.py  middlewares.py  pipelines.py  settings.py
scraper/canebiere/spiders/: canebiere_spider.py
utils/: data.py
